Fixed some contrast

--- a/src/routes/LearningRoute/LearningRoute.css
+++ b/src/routes/LearningRoute/LearningRoute.css
@@ -49,13 +49,21 @@ legend {
   font-weight: bold;
 }
 .greenTea {
-  color: #31602e;
+  color: #065201;
   font-weight: bold;
+  text-shadow: -1px 1px 2px #000,
+  1px 1px 2px #000,
+  1px -1px 0 #000,
+  -1px -1px 0 #000000;
 }
 
 .strawberry {
-  color: #E50D31;
+  color: #640011;
   font-weight: bold;
+  text-shadow: -1px 1px 2px #000,
+  1px 1px 2px #000,
+  1px -1px 0 #000,
+  -1px -1px 0 #000000;
 }
 
 .wordCard {
